Deployment/Deployment.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: apps/v1
kind: Deployment
metadata:      
  name: sample-kuber 
spec: 
  replicas: 1  
  selector:
    matchLabels:
      app: sample-kuber        
  template:
    metadata:      
      labels:
        app: sample-kuber         
    spec:
      containers:
      - name: sample-kuber 
        image: sampledevsetup:latest
        imagePullPolicy: Never        
        ports:
        - containerPort: 80
