Deployment/Service.yml
apiVersion: v1
kind: Service
metadata:       
  name: sample-service 
spec: 
  ports:  
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80   
  selector:
    app: sample-kuber
