Deployment/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-kuber-virtual  
spec:
  hosts:
  - "*"
  gateways:
  - local-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /WeatherForecast
    - port: 80     
    route:
    - destination:
        host: sample-service.default.svc.cluster.local
        port:
          number: 80
